--- a/helm-chart-sources/helm-chart-test/templates/service.yaml
+++ b/helm-chart-sources/helm-chart-test/templates/service.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "helm-chart-test.fullname" . }}
+  #name: {{ include "helm-chart-test.fullname" . }}
+  name: testing
   labels:
     {{- include "helm-chart-test.labels" . | nindent 4 }}
 spec:
