--- a/helm-chart-sources/helm-chart-test/values.yaml
+++ b/helm-chart-sources/helm-chart-test/values.yaml
@@ -3,7 +3,7 @@
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
-
+controller.service.name: test-service
 image:
   repository: nginx
   pullPolicy: IfNotPresent
