--- a/helm-chart-sources/helm-chart-test/templates/service.yaml
+++ b/helm-chart-sources/helm-chart-test/templates/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   #name: {{ include "helm-chart-test.fullname" . }}
-  name: {{ .Values.controller.service.name }}
+  name: {{ .Values.service.name }}
   labels:
     {{- include "helm-chart-test.labels" . | nindent 4 }}
 spec:
